# diplib

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DIPdoc.md  DIPimageViewer_sources.cmake  DIPimage_sources.cmake  DIPlib_sources.cmake  DIPthoughts.docx  DIPthoughts.md  DIPviewer_sources.cmake  DIPworkplan.md  Doxyfile  INSTALL.md  INSTALL_Linux.md  INSTALL_MacOS.md  INSTALL_Windows.md  INSTALL_documentation.md  LICENSE.txt  Makefile  PyDIP_sources.cmake  PyDIPviewer_sources.cmake  README.md  README_MacOS.md  README_Windows.md  codestyle.xml  frameworkindex.txt  listings_setup.tex  mextest.cpp  overloadtest.cpp  pdf_colored_links.tex  repository_organization.txt  test.cpp
dependencies/libics/: .gitignore  CMakeLists.txt  README  TODO  libics.h  libics_binary.c  libics_compress.c  libics_conf.h  libics_data.c  libics_gzip.c  libics_history.c  libics_intern.h  libics_ll.h  libics_preview.c  libics_read.c  libics_sensor.c  libics_sensor.h  libics_test.c  libics_test.h  libics_top.c  libics_util.c  libics_write.c  test_compress.c  test_gzip.c  test_history.c  test_ics1.c  test_ics2a.c  test_ics2b.c  test_metadata.c  test_strides.c  test_strides2.c  test_strides3.c
dependencies/libjpeg/: CMakeLists.txt  jconfig.h  jerror.c
dependencies/libtiff/: CMakeLists.txt
dipimage/: CMakeLists.txt  Contents.m  DIPimageViewer_Mfiles.cmake  DIPimageViewer_sources.cmake  DIPimage_Mfiles.cmake  DIPimage_sources.cmake  DIPviewer_Mfiles.cmake  TODO  abssqr.m  affine_trans.cpp  affine_trans.m  aniso.m  apply_colormap.m  areaclosing.m  areaopening.cpp  areaopening.m  arrangeslices.m  array2im.m  asf.cpp  asf.m  autocorrelation.m  bbox.m  bclosing.cpp  bclosing.m  bdilation.cpp  bdilation.m  berosion.cpp  berosion.m  bilateralf.cpp  bilateralf.m  bmajority.m  bopening.cpp  bopening.m  boundary_condition.m  bpropagation.cpp  bpropagation.m  brmedgeobjs.m  bskeleton.cpp  bskeleton.m  cal_readnoise.m  (+365 more)
dipimage/@dip3_image/: TODO  dip3_image.m  max.cpp  mean.cpp  mean.m  min.cpp  percentile.cpp  percentile.m  prod.cpp  prod.m  std.cpp  std.m  sum.cpp  var.cpp
dipimage/@dip_image/: TODO  all.cpp  all.m  any.cpp  any.m  besselj.m  bessely.m  circshift.cpp  circshift.m  clone.m  colorspace.m  complex.m  convhull.m  cross.cpp  cross.m  cumsum.cpp  cumsum.m  curl.cpp  curl.m  det.cpp  det.m  diag.m  dip_image.m  divergence.cpp  divergence.m  dot.cpp  dot.m  eig.cpp  eig.m  eye.m  find.m  findcoord.m  gradient.cpp  gradient.m  ind2sub.m  inv.cpp  inv.m  iterate.m  linspace.m  max.cpp  (+32 more)
dipimage/alias/: closing_se.m  countneighbours.m  curvature_thirion.m  dilation_se.m  erosion_se.m  imarfun.m  isophote_curvature.m  jacobi.m  mae.m  mre.m  mse.m  msr_remap.m  mutualinformation.m  newimar.m  opening_se.m  orientation4d.m  psnr.m  rankmax_opening_se.m  rankmin_closing_se.m  smooth.m  split.m  ssim.m  structuretensor3d.m
dipimage/private/: bfCheckJavaPath.m  cell2str.m  compute_derivatives.cpp  convertpath.m  dip_analysis.cpp  dip_fileio.cpp  dip_filtering.cpp  dip_generation.cpp  dip_geometry.cpp  dip_isodatathreshold.cpp  dip_math.cpp  dip_microscopy.cpp  dip_morphology.cpp  dip_segmentation.cpp  dipfig_clear_state.m  dipfig_getbordersize.m  dipfig_getcurpos.m  dipfig_getcurrentzoom.m  dipfig_isnormalaspect.m  dipfig_set_action_check.m  dipfig_setpointer.m  dipfig_titlebar.m  dippreferences.m  errordialog.m  evalbool.m  filtering.cpp  formatvalue.m  getdir.m  getfigh.m  getfile.m  gst_subsample.m  handlelist.m  handleselect.m  imagedisplay.cpp  internal_ramp.m  is_valid_varname.m  isfigh.m  isfighlist.m  label_colormap.m  libraryinformation.cpp  (+29 more)
dipimage/tests/: assert_approx_equal.m  assert_equal.m  assert_true.m  dip_image_squeeze.m  file_io.m  filtering.m  image_arithmetic.m  run_tests.m  startup.m  subpixmax.m
dipimage/user_manual/: 01_introduction.md  02_installation.md  03_getting_started.md  04_dip_image.md  05_dip_measurement.md  06_figure_windows.md  07_functions.md  08_customizing.md  09_mex_files.md  10_compiler.md  dum_headings.sty  template.tex
doc/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.in  README.html  dox++config.in
doc/css/: m-components.css  m-dip+documentation.compiled.css  m-documentation.css  m-grid.css  m-layout.css  m-theme-dip.css  postprocess.py  pygments-dip.css  pygments-dip.py
doc/html_templates/: README.md  details-alias.html  details-class.html  details-enum.html  details-function.html  details-macro.html  details-variable.html
doc/logo/: readme.txt
doc/m.css/: doxygen.py
doc/old/: DoxygenCustom.css
doc/release_procedure/: DIPimage_on_Linux.md  DIPimage_on_Windows.md  DIPlib_release.md
doc/src/: DIPimage.md  PyDIP.md  changes.md  concepts.md  design.md  features.md  history.md  image.md  iterators.md  main.md  styleguide.md  viewer.md  why_tensors.md  windows_release.md
examples/: CMakeLists.txt  DIP.tif  blur.tif  cameraman.tif  chromo3d.ics  display.cpp  erika.tif  fileviewer.cpp  filter_image.cpp  fractal1.tiff  fractal4.tiff  fractal5.tiff  fractal_dimension.cpp  generate_shapes.cpp  hough.py  image_arithmetic.cpp  matlab_mex_example.cpp  matlab_mex_example.mexmaci64  orka.tif  pydip.py  pydip_examples.ipynb  pydip_examples.py  radial_mean.cpp  register_measurement_feature.cpp  select_objects.cpp  test_binary.cpp  test_filters.cpp  tifftest.py  time_dilations.cpp  time_openmp.cpp  trui.ics  trui.ids  variance.cpp  viewer.cpp
examples/cpp/: blend_images.cpp  color_quantization.cpp  detect_circles.cpp  display.cpp  fileviewer.cpp  filter_image.cpp  radial_mean.cpp  (+17 more)
javaio/: CMakeLists.txt  DIPjavaio_sources.cmake  Manifest.txt.in
pydip/: CMakeLists.txt  PyDIP_py.py  PyDIP_sources.cmake  PyDIPjavaio_sources.cmake  PyDIPviewer_sources.cmake  __init__.py  __init__.py.in  analysis.cpp  assorted.cpp  display.cpp  filtering.cpp  image.cpp  linear.cpp  math.cpp  measurement.cpp  morphology.cpp  pydip.cpp  pydip.h  statistics.cpp
src/: CMakeLists.txt  DIPlib_sources.cmake  datatypes.cpp  error.cpp  image.cpp  readme.txt
viewer/: CMakeLists.txt  DIPviewer_sources.cmake
(+776 files in other folders)
